--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "mkdir",
   "description": "Directory creation utilities",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "http://github.com/joehewitt/mkdir",
   "repository": {
-      "type": "git",
-      "url" : "http://github.com/joehewitt/mkdir.git"
+    "type": "git",
+    "url": "git://github.com/joehewitt/mkdir.git"
   },
-  "keywords": ["fs"],
+  "keywords": [
+    "fs"
+  ],
   "author": "Joe Hewitt <joe@joehewitt.com>",
   "contributors": [],
-  "dependencies": {      
+  "dependencies": {},
+  "engines": {
+    "node": ">=0.4.0"
   },
-  "engines": { "node": ">=0.4.0" },
   "main": "./lib/mkdir",
-  "directories": {}
+  "directories": {},
+  "devDependencies": {}
 }
